2/ingress-health-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-health-app
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: "arch.homework"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: health-app-service
            port:
              number: 8080
      # - path: /otusapp/.+/(health)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: health-app-service
      #       port:
      #         number: 8000
